# Alek-s-Email-Assistant

./: .env.example  .gitignore  README.md  bootstrap.ps1  bootstrap.sh  terraform_plan.md  test_ws.html
backend/: check_finish_frame.py  check_frame_types.py  check_frames.py  check_params.py  check_task.py  pyproject.toml  test_async_nylas.py  test_flow.py  test_text.py  test_ws.py  test_ws_flow.py
backend/app/: __init__.py  config.py  main.py
backend/app/models/: __init__.py  base.py  conversation.py  profile.py  settings.py
backend/app/pipecat_bot/: __init__.py  bot.py
backend/app/pipecat_bot/prompts/: system_prompt.py
backend/app/pipecat_bot/tools/: __init__.py  attachment_tools.py  email_tools.py
backend/app/services/: attachment_processor.py  database.py  nylas_service.py  profile_service.py  settings_service.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  main.tsx
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/ConversationHistory/: index.tsx
frontend/src/components/EmailCard/: index.tsx
frontend/src/components/Settings/: index.tsx
frontend/src/components/VoiceInterface/: AudioVisualizer.tsx  MicrophoneButton.tsx  StatusIndicator.tsx  index.tsx
frontend/src/hooks/: useVoiceSession.ts
frontend/src/services/: api.ts
frontend/src/store/: index.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
